# acousshits

./: README.md  pyproject.toml
data/: ASW.csv  Cálculos.xlsx  LEV.csv  SNR.csv  data.xlsx  mocked-measurement.csv  results_LF-DR_objective.tsv  results_LF-DR_subjective.tsv
plotting/: coso.py  dr_ratio.py  iacc_globals.py  lf.py  main.py  plots.py  snr.py  stage_parameters.py  sti.py  synthesize_data.py  utils.py
plotting/acoustical_parameters/: __init__.py  postprocess.py  run.py
